--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with your requirements file
+        pip install -r .github-workflows/requirements.txt  # Replace with your requirements file
 
     - name: Run pytest
       run: pytest test_vue9.py
