--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
         && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list \
         && sudo apt-get update \
         && sudo apt-get install -y google-chrome-stable \
-        && wget -O /tmp/chromedriver.zip "https://chromedriver.storage.googleapis.com/123.0.6312.86/chromedriver_linux64.zip" \
+        && wget -O /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/123.0.6312.86/linux64/chromedriver-linux64.zip" \
         && sudo unzip /tmp/chromedriver.zip -d /usr/local/bin \
         && sudo rm /tmp/chromedriver.zip \
-        && sudo chmod +x /usr/local/bin/chromedriver \
+        && sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver \
         && python -m pip install --upgrade pip \
         && pip install -r .github/workflows/requirements.txt 
 
