--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,19 @@ jobs:
 
     - name: Install necessary dependencies
       run: |
-        sudo apt-get update && sudo apt-get install -y wget \
-        && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - \
-        && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list \
-        && sudo apt-get update \
-        && sudo apt-get install -y google-chrome-stable \
-        && wget -O /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/123.0.6312.86/linux64/chromedriver-linux64.zip" \
-        && sudo unzip /tmp/chromedriver.zip -d /usr/local/bin \
-        && sudo rm /tmp/chromedriver.zip \
-        && sudo chmod +x /usr/local/bin/chromedriver-linux64/chromedriver \
-        && python -m pip install --upgrade pip \
-        && pip install -r .github/workflows/requirements.txt 
+        sudo apt-get update && \
+        sudo apt-get install -y wget xvfb && \
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - && \
+        echo "deb http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list && \
+        sudo apt-get update && \
+        sudo apt-get install -y google-chrome-stable && \
+        wget -O /tmp/chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/123.0.6312.86/linux64/chromedriver_linux64.zip" && \
+        sudo unzip /tmp/chromedriver.zip -d /usr/local/bin && \
+        sudo rm /tmp/chromedriver.zip && \
+        sudo chmod +x /usr/local/bin/chromedriver && \
+        python -m pip install --upgrade pip && \
+        pip install -r .github/workflows/requirements.txt
+
 
     - name: Run pytest
       run: pytest .github/workflows/test_vue9.py
